--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "chokidar": "^1.7.0",
     "enzyme": "^2.8.2",
+    "gh-pages": "^0.12.0",
     "highlight.js": "^9.12.0",
     "npm-run-all": "^4.1.0",
     "react-addons-test-utils": "^15.5.1",
@@ -61,9 +62,12 @@
     "start:docs": "node scripts/start.js",
     "gen:docs": "node scripts/generateComponentData.js",
     "gen:docs-watch": "npm run gen:docs  -- --watch",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "build:docs": "node scripts/build.js",
+    "test": "node scripts/test.js --env=jsdom",
+    "predeploy:docs": "npm run build:docs",
+    "deploy:docs": "gh-pages -d build"
   },
+  "homepage": "http://miker169.github.io/ps-react-miker169/",
   "jest": {
     "collectCoverageFrom": [
       "src/**/*.{js,jsx}"
