--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
   "name": "ps-react-miker169",
   "version": "0.1.0",
-  "private": true,
-  "devDependencies": {
-    "chokidar": "^1.7.0",
-    "enzyme": "^2.8.2",
-    "gh-pages": "^0.12.0",
-    "highlight.js": "^9.12.0",
-    "npm-run-all": "^4.1.0",
-    "react-addons-test-utils": "^15.5.1",
-    "react-docgen": "^2.17.0",
-    "react-prism": "^4.3.0",
-    "react-test-renderer": "^15.5.4"
+  "main": "./lib/index.js",
+  "engines": {
+    "node": ">=4.0.0"
   },
-  "dependencies": {
+  "author":{
+    "name": "Mike Rayner",
+    "email": "no@tellingyou.com",
+    "url": "http://google.con"
+  },
+  "file": ["lib"],
+  "keywords": [
+    "components",
+    "react",
+    "react-component",
+    "toolkit"
+  ],
+  "devDependencies": {
     "autoprefixer": "7.1.2",
+    "babel-cli": "^6.24.1",
     "babel-core": "6.25.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
@@ -23,6 +28,9 @@
     "babel-runtime": "6.23.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "chokidar": "^1.7.0",
+    "cpx": "^1.5.0",
+    "cross-env": "^4.0.0",
     "css-loader": "0.28.4",
     "dotenv": "4.0.0",
     "eslint": "4.4.1",
@@ -33,8 +41,11 @@
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.1.0",
     "extract-text-webpack-plugin": "3.0.0",
+    "enzyme": "^2.8.2",
     "file-loader": "0.11.2",
     "fs-extra": "3.0.1",
+    "gh-pages": "^0.12.0",
+    "highlight.js": "^9.12.0",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "object-assign": "4.1.1",
@@ -42,19 +53,27 @@
     "postcss-loader": "2.0.6",
     "prismjs": "^1.6.0",
     "promise": "8.0.1",
-    "react": "^15.6.1",
+    "npm-run-all": "^4.1.0",
+    "react-addons-test-utils": "^15.5.1",
     "react-dev-utils": "^3.1.0",
-    "react-dom": "^15.6.1",
+    "react-docgen": "^2.17.0",
+    "react-prism": "^4.3.0",
+    "react-test-renderer": "^15.5.4",
+    "rimraf": "^2.6.1",
     "react-error-overlay": "^1.0.10",
     "react-prism": "^4.3.0",
     "style-loader": "0.18.2",
-    "styled-components": "^1.4.5",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.5.9",
     "webpack": "3.5.1",
     "webpack-dev-server": "2.7.1",
     "webpack-manifest-plugin": "1.2.1",
     "whatwg-fetch": "2.0.3"
+  },
+  "dependencies": {
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "styled-components": "^1.4.5"
   },
   "scripts": {
     "prestart": "npm run gen:docs",
@@ -64,8 +83,13 @@
     "gen:docs-watch": "npm run gen:docs  -- --watch",
     "build:docs": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
+    "build:css": "cpx \"./src/components/**/*.css\" ./lib",
+    "prebuild:lib": "rimraf lib",
+    "build:lib": "npm run build:commonjs && npm run build:css",
     "predeploy:docs": "npm run build:docs",
-    "deploy:docs": "gh-pages -d build"
+    "deploy:docs": "gh-pages -d build",
+    "build:commonjs": "cross-env NODE_ENV=production babel ./src/components --out-dir ./lib --ignore spec.js",
+    "prepublish": "npm run build:lib"
   },
   "homepage": "http://miker169.github.io/ps-react-miker169/",
   "jest": {
@@ -103,6 +127,12 @@
   },
   "babel": {
     "presets": [
+      [
+        "env",
+        {
+          "modules": "commonjs"
+        }
+      ],
       "react-app"
     ]
   },
